# ai-gatekeeper-kbs-plugin

./: .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  main.py  policy.rego  pyproject.toml
ai_gatekeeper/: config.py  ear_normalizer.py  handler.py  jwt_verifier.py  keycloak_client.py  rego_evaluator.py
demo/: Dockerfile.client  Dockerfile.kbs  Dockerfile.test-runner  Makefile  README.md  demo-client.py  docker-compose.yml  policy.rego
demo/config/: plugin-config.yaml  realm.json
demo/mock-model/: app.py  requirements.txt
demo/secrets/: kc-secret
demo/tests/: demo.sh
docs/superpowers/plans/: 2026-04-22-keycloak-demo.md  2026-04-23-demo-model-endpoint.md  2026-04-23-ear-claims-role-derivation.md
docs/superpowers/specs/: 2026-04-20-e2e-test-design.md  2026-04-22-keycloak-demo-design.md  2026-04-23-demo-model-endpoint-design.md  2026-04-23-ear-claims-role-derivation-design.md  2026-04-26-initdata-format-fix-design.md
e2e/: Dockerfile.test-runner  Makefile  docker-compose.yml  mock-keycloak.py  policy.rego
e2e/config/: kbs.toml  plugin-config.yaml
e2e/tests/: e2e.sh
tests/: test_config.py  test_ear_normalizer.py  test_handler.py  test_jwt_verifier.py  test_keycloak_client.py  test_policy.py  test_rego_evaluator.py
