[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-gatekeeper"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "kbs-plugin-sdk-python>=0.1.0",
    "pydantic>=2.0",
    "pyyaml",
    "PyJWT[crypto]>=2.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "cryptography>=42",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_gatekeeper*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
